- Addded Fluent validation - Added another level - Services

--- a/ELibrary.BlazorClient/Pages/Books.razor
+++ b/ELibrary.BlazorClient/Pages/Books.razor
@@ -345,7 +345,7 @@
         
         try
         {
-            books = await BookApi.FindBooksByCriteriaAsync(searchName, searchAuthor, searchIsbn);
+            books = await BookApi.SearchBooksAsync(searchName, searchAuthor, searchIsbn);
         }
         catch (Exception ex)
         {
