--- a/ELibrary.BlazorClient/_Imports.razor
+++ b/ELibrary.BlazorClient/_Imports.razor
@@ -8,5 +8,5 @@
 @using ELibrary.BlazorClient
 @using ELibrary.BlazorClient.Services
 @using ELibrary.BlazorClient.Shared
-@using ELibrary.Shared.DTOs
-@using ELibrary.Shared.Entities
+@using ELibrary.Domain.DTOs
+@using ELibrary.Domain.Entities
