--- a/ELibrary.UIBlazorClient/_Imports.razor
+++ b/ELibrary.UIBlazorClient/_Imports.razor
@@ -5,8 +5,8 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using ELibrary.BlazorClient
-@using ELibrary.BlazorClient.Services
-@using ELibrary.BlazorClient.Shared
+@using ELibrary.UIBlazorClient
+@using ELibrary.UIBlazorClient.Services
+@using ELibrary.UIBlazorClient.Shared
 @using ELibrary.Domain.DTOs
 @using ELibrary.Domain.Entities
