--- a/ELibrary.UIBlazorClient/Pages/_Host.cshtml
+++ b/ELibrary.UIBlazorClient/Pages/_Host.cshtml
@@ -1,5 +1,5 @@
 @page "/"
-@namespace ELibrary.BlazorClient.Pages
+@namespace ELibrary.UIBlazorClient.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = "_Layout";
