--- a/ELibrary.UIBlazorClient/Pages/_Layout.cshtml
+++ b/ELibrary.UIBlazorClient/Pages/_Layout.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Components.Web
-@namespace ELibrary.BlazorClient.Pages
+@namespace ELibrary.UIBlazorClient.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
