- file restructuralization - auto mapper added -

--- a/ELibrary.UIBlazorClient/_Imports.razor
+++ b/ELibrary.UIBlazorClient/_Imports.razor
@@ -8,5 +8,5 @@
 @using ELibrary.UIBlazorClient
 @using ELibrary.UIBlazorClient.Services
 @using ELibrary.UIBlazorClient.Shared
-@using ELibrary.Domain.DTOs
+@using ELibrary.Application.DTOs
 @using ELibrary.Domain.Entities
